--- a/PopularSearcherApp/PopularSearcherApp/Base.lproj/Main.storyboard
+++ b/PopularSearcherApp/PopularSearcherApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4CU-KV-h5r">
-                                <rect key="frame" x="0.0" y="585" width="393" height="162"/>
+                                <rect key="frame" x="0.0" y="695" width="393" height="52"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Sw-ed-5Yl">
@@ -30,15 +30,15 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0xn-cy-v5k">
-                                <rect key="frame" x="25" y="104" width="352" height="473"/>
+                                <rect key="frame" x="16" y="104" width="361" height="473"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" id="kyY-2A-Vd6">
-                                        <rect key="frame" x="0.0" y="50" width="352" height="44.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="361" height="44.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kyY-2A-Vd6" id="HvA-MB-yt7">
-                                            <rect key="frame" x="0.0" y="0.0" width="352" height="44.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="44.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
@@ -51,6 +51,13 @@
                                 <rect key="frame" x="25" y="61" width="90" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="시간" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nOX-Ri-vBw">
+                                <rect key="frame" x="25" y="593" width="352" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -59,6 +66,7 @@
                     <connections>
                         <outlet property="btnStart" destination="2Sw-ed-5Yl" id="mwB-Uk-Aev"/>
                         <outlet property="imgView" destination="Mbw-nS-Nng" id="o5D-sT-gBg"/>
+                        <outlet property="lblUpToDate" destination="nOX-Ri-vBw" id="B3c-oV-s1r"/>
                         <outlet property="myTableView" destination="0xn-cy-v5k" id="RUl-GG-aPs"/>
                     </connections>
                 </viewController>
